--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="hr">
 <head>
-<meta charset="UTF-8">
-<title>Tommy Theidey</title>
+  <meta charset="UTF-8">
+  <title>Tommy Theidey | Izrada web stranica</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- POVEZNICA NA CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1>Pozdrav 👋</h1>
-<p>Ovo je moja prva GitHub Pages stranica.</p>
+
+  <!-- HERO SEKCIJA -->
+  <header class="hero">
+    <div class="hero-inner">
+      <h1>Izrađujem moderne web stranice<br>za male biznise</h1>
+
+      <p class="hero-text">
+        Brze, pregledne i prilagođene mobitelima.<br>
+        Javi se i dobit ćeš besplatnu procjenu.
+      </p>
+
+      <a href="#kontakt" class="btn-primary">Zatraži ponudu</a>
+    </div>
+  </header>
+
+  <!-- KONTAKT -->
+  <section class="contact" id="kontakt">
+    <h2>Kontakt</h2>
+    <p>
+      Zanima te web stranica ili suradnja?<br>
+      Javi se na email ispod.
+    </p>
+
+    <p class="contact-email">
+      📧 <a href="mailto:tommytheidey@gmail.com">
+        tommytheidey@gmail.com
+      </a>
+    </p>
+  </section>
+
 </body>
 </html>
+
