--- a/index.html
+++ b/index.html
@@ -24,6 +24,46 @@
       <a href="#kontakt" class="btn-primary">Zatraži ponudu</a>
     </div>
   </header>
+<section class="section">
+  <h2>Usluge</h2>
+  <p class="lead">
+    Radim jednostavne, moderne web stranice koje izgledaju profesionalno i na mobitelu.
+  </p>
+
+  <div class="cards">
+    <div class="card">
+      <h3>Basic</h3>
+      <p class="price">150 – 250 €</p>
+      <p>Jedna stranica (landing), kontakt, osnovni dizajn.</p>
+    </div>
+
+    <div class="card">
+      <h3>Standard</h3>
+      <p class="price">300 – 600 €</p>
+      <p>3–5 stranica, bolja struktura, prilagodba sadržaja.</p>
+    </div>
+
+    <div class="card">
+      <h3>Premium</h3>
+      <p class="price">700 €+</p>
+      <p>Landing + optimizacija brzine + osnovni SEO.</p>
+    </div>
+  </div>
+</section>
+
+<section class="section dark">
+  <h2>Kako radimo</h2>
+
+  <ol class="steps">
+    <li><strong>Dogovor:</strong> Kažeš što trebaš i pošalješ tekst/slike.</li>
+    <li><strong>Izrada:</strong> Napravim dizajn i pošaljem ti pregled.</li>
+    <li><strong>Objava:</strong> Objavimo stranicu i po potrebi radim sitne izmjene.</li>
+  </ol>
+
+  <p class="note">
+    Želiš ponudu? Klikni “Zatraži ponudu” ili skrolaj do kontakta na dnu.
+  </p>
+</section>
 
   <!-- KONTAKT -->
   <section class="contact" id="kontakt">
@@ -42,4 +82,5 @@
 
 </body>
 </html>
+
 
